--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -24,7 +24,7 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
     crossorigin="anonymous"
   />
-    <title>React App</title>
+    <title>Cafearte Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
